--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
     "jest": "18.1.0",
     "json-loader": "0.5.4",
     "object-assign": "4.1.1",
-    "postcss-loader": "1.2.2",
+    "postcss-loader": "^1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.0",
     "recursive-readdir": "2.1.0",
@@ -47,8 +47,12 @@
     "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
+    "postcss": "^5.2.15",
+    "postcss-cssnext": "^2.9.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-style-proptype": "^2.0.1",
+    "react-toolbox": "^2.0.0-beta.6"
   },
   "scripts": {
     "start": "node scripts/start.js",
